# CMakeList.txt : CMake project for Lab3_C++, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Lab3_C++")

# Add source to this project's executable.
add_executable (Lab3_C++       "CppDemos.cpp" "CppDemos.h" "Game.cpp" "Game.h")

# TODO: Add tests and install targets if needed.
