################################################################### 
# FILE: CMakeLists.txt
# PURPOSE: For building lab 3
# AUTHORS: Tran Phuong Anh Nguyen - 040990608, Huy Vo - 040993746
# PROFESSOR: Paulo Sousa
# COURSE: CST8219_301 
###################################################################
cmake_minimum_required (VERSION 3.8)
project ("Lab3_C++")

# Add source to this project's executable.
add_executable (Vo746_Nguyen608_Lab3_C++ "CppDemos.cpp" "CppDemos.h" "Game.cpp" "Game.h"  "Player.h" "Player.cpp")

# TODO: Add tests and install targets if needed.
